<resources>
    //APP
    <string name="app_name">GoChef</string>
    <string name="facebook_app_id">1297226603776561</string>
    <string name="fb_login_protocol_scheme">fb1297226603776561</string>
    //Login Activity
    <string name="login_app_text">Provavelmente não muito bom...\nMelhor testar pra ter certeza!</string>
    <string name="login_logo_description">Logo login activity</string>
    <string name="login_null_text">O QUE VAI AQUI</string>
    //Main Activity
    <string name="main_image_description">Saido do forno</string>
    <string name="main_search_text">Busca </string>
    <string name="main_hint_text">Pão de alho&#8230;</string>
    <string name="main_section_text">Tipo da receita</string>
    <string name="main_name_text">Nome da receita</string>
    <string name="main_recipe_text">Mais receitas</string>
    <string name="list_recipe_text">Nome em lista</string>
    <string name="list_recipe_image">Imagem em lista</string>
    <string name="nav_home">RECEITAS</string>
    <string name="nav_fav">FAVORITOS</string>
    <string name="nav_user">PERFIL</string>
    <string name="fav_text">Nenhum favorito salvo!\nExperimente salvar uma receita clicando no ♥</string>
    <string name="exp_ingredients">Ingredientes</string>
    <string name="exp_steps">Modo de preparo</string>
    <string name="exp_more">Mais receitas como esta&#8230;</string>
    <string name="exp_share">Compartilhar</string>
    <string name="exp_fav">Favoritar</string>
    <string name="exp_back">Retornar</string>
    <string name="exp_ing_dot">•</string>
    <string name="exp_step_dot">n</string>
    <string name="exp_url">Acesse o Site</string>
    <string name="user_photo">Foto de usuario</string>
    <string name="user_name">Nome</string>
    <string name="user_email">Email</string>
    <string name="user_logout">Sair</string>
    <string name="user_cred">Feito por Junior Rottava.\nMe contrata pf</string>
    <string name="search_text">Busca!</string>

</resources>
